update: show rss

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -14,3 +14,10 @@ entries:
       show_more: true
       show_more_text: archive
       show_more_url: archive.html
+
+  - title:
+    post_list:
+      limit: 0
+      show_more: true
+      show_more_text: rss
+      show_more_url: feed.xml
