--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ goat_counter: "kleo" # put your GoatCounter name if you want to use GoatCounter 
 remote_theme: riggraz/no-style-please
 
 theme_config:
-  appearance: "auto" # can be "light", "dark" or "auto"
+  appearance: "light" # can be "light", "dark" or "auto"
   back_home_text: ".." # customize text for homepage link in post layout
   date_format: "%Y-%m-%d" # customize how date is formatted
   show_description: false # show blog description in home page
